# Tracking-People-in-Aerial-Footage

./: .gitignore  README.md  convert_visdrone_to_yolo.py  download_datasets.sh  infer.py  main.py  pyproject.toml  test_all_models.py  test_model_visdrone.py
data/: README.md  combine_datasets.py  combine_yolo_datasets.py  convert_mot20_to_yolo.py  convert_okutama_to_yolo.py  convert_visdrone_det_to_yolo.py  convert_visdrone_to_yolo.py  explore_mot20.py  okutama_validation.py  visualize_yolo_dataset.py  yolo_to_coco.py
datasets/: README.md
faster_rcnn/: dataset.py  faster_rcnn.ipynb  inference.py  test.py  test_faster_rcnn_models.py  train.py  train_faster_rcnn.py
rf_detr/: inference.py  test.py  test_rf_detr_models.py  train.py
ultralytics_models/: inference.py  test.py  train.py  utils.py
ultralytics_models/yolo_configs/: yolov26-p2.yaml  yolov8-p2.yaml
